# hypothesis-auto

./: .cruft.json  .travis.yml  404.html  CHANGELOG.md  README.md  index.html  pyproject.toml  sitemap.xml
.github/workflows/: lint.yml  test.yml
CHANGELOG/: index.html
art/: logo_large.xcf
docs/contributing/: 1.-contributing-guide.md  4.-acknowledgements.md
docs/contributing/1.-contributing-guide/: index.html
docs/contributing/2.-coding-standard/: index.html
docs/contributing/3.-code-of-conduct/: index.html
docs/contributing/4.-acknowledgements/: index.html
hypothesis_auto/: __init__.py  pytest.py  tester.py
reference/hypothesis_auto/: index.html
reference/hypothesis_auto/pytest/: index.html
reference/hypothesis_auto/tester/: index.html
scripts/: clean.sh  lint.sh  test.sh
search/: search_index.json
tests/: example_module.py  test_tester.py
