[tool.poetry]
name = "hypothesis-auto"
version = "1.1.5"
description = "Extends Hypothesis to add fully automatic testing of type annotated functions"
authors = ["Timothy Crosley <timothy.crosley@gmail.com>"]
license = "MIT"
readme = "README.md"
include = [
    { path = "tests", format = "sdist" },
]

[tool.poetry.dependencies]
python = ">=3.6"
pydantic = ">=0.32.2, <2.0.0"
hypothesis = ">=6.0.4, <7.0.0"
pytest = { version = ">=4.0.0", optional = true }

[tool.poetry.extras]
pytest = ["pytest"]

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
vulture = ">=1.0"
bandit = ">=1.6"
safety = ">=1.8"
isort = ">=4.3"
flake8-bugbear = ">=19.8"
black = {version=">=1.0.0", python=">=3.7"}
mypy = ">=0.730.0"
ipython = ">=7.7"
pytest-cov = ">=2.7"
pytest-mock = ">=1.10"
pep8-naming = ">=0.8.2"
portray = {version=">=1.3.0", python=">3.7,<4.0"}
cruft = {version=">=1.1", python=">3.7,<4.0"}
numpy = {version=">=1.21.5", python=">=3.7,<3.11"}

[tool.portray]
modules = ["hypothesis_auto"]

[tool.portray.mkdocs.theme]
favicon = "art/logo.png"
logo = "art/logo.png"
name = "material"
palette = {primary = "teal", accent = "cyan"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
